@@ -34,18 +34,13 @@
 // |                                                                          |
 // +--------------------------------------------------------------------------+
 
-require_once('lib-common.php');
-require_once( $_CONF['path_system'] . 'lib-admin.php' );
+require_once 'lib-common.php';
+USES_lib_admin();
 
 $display = '';
 
-if (empty ($_USER['username']) &&
-    (($_CONF['loginrequired'] == 1) || ($_CONF['statsloginrequired'] == 1))) {
-    $display .= COM_siteHeader('menu', $LANG_LOGIN[1]);
-    $display .= SEC_loginRequiredForm();
-    $display .= COM_siteFooter();
-    echo $display;
-    exit;
+if ( !SEC_hasRights('stats.view') ) {
+    COM_404();
 }
 
 // MAIN
